atualiza parcialmente a app antes de enviar a mesma a loja oficial

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -9,4 +9,5 @@
     <string name="last_posts">Últimas Postagens</string>
     <string name="latest_updates">Últimas Atualizações</string>
     <string name="title_posts">Postagens</string>
+    <string name="title_aboutme">Sobre Mim</string>
 </resources>
