--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="last_posts">Latest Posts</string>
     <string name="latest_updates">Latest Updates</string>
     <string name="title_posts">Posts</string>
+    <string name="title_aboutme">About Me</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
